--- a/src/app/js/components/container-com/Blog/style.scss
+++ b/src/app/js/components/container-com/Blog/style.scss
@@ -10,6 +10,11 @@
     position: sticky;
     top: 79pt;
   }
+
+  // hack, fix nav shake problem
+  > main > div > div:nth-child(2){border: solid 1px transparent}
+  // -----------------------------------------------------------
+
   section[data-loading] {
     position: relative;
     top: 0;
