--- a/src/app/js/components/static-com/Nav/style.scss
+++ b/src/app/js/components/static-com/Nav/style.scss
@@ -2,7 +2,7 @@
 .nav {
   margin: 0;
   padding: 0;
-  width: 50%;
+  width: auto;
   position: fixed;
   top: 153pt;
   &::after {
@@ -16,6 +16,7 @@
     list-style: none;
     height: 40pt;
     cursor: pointer;
+    background: none;
 
     &::before {
       content: '';
