refactor(post/style): 调整 photo 分类内容与分割线之间的距离。

--- a/src/app/js/components/static-com/Post/style.scss
+++ b/src/app/js/components/static-com/Post/style.scss
@@ -17,7 +17,11 @@ article {
   }
 
   img {max-width: 100%}
-  
+
+  .markdown-body > img {
+    margin-bottom: 5pt;
+  }
+
   pre, .markdown-body {
     font-family: "Microsoft YaHei", serif;
     line-height: 2;
