refactor(Blog/style): 调整博客标题样式，以及计数组件样式。

--- a/src/app/js/components/container-com/Blog/style.scss
+++ b/src/app/js/components/container-com/Blog/style.scss
@@ -2,13 +2,19 @@
 .blog {
   margin-top: 79pt;
   font-family: Microsoft Yahei, serif;
-  .blog-title {
-    font-size: 15pt;
-  }
-
   > header {
     position: sticky;
     top: 79pt;
+  }
+  .blog-header {
+    > div:last-child {
+      padding: 9pt 0;
+    }
+  }
+  .blog-title {
+    font-size: 15pt;
+    border-bottom: 1pt solid #ffba26;
+    padding: 4pt 0;
   }
 
   section[data-loading] {
@@ -28,7 +34,9 @@
     }
   }
 
-  .email { font-size: 7pt}
+  .email {
+    font-size: 7pt;
+  }
   main {
     margin-top: 42pt;
   }
