--- a/src/app/js/components/static-com/DaysFrom/style.scss
+++ b/src/app/js/components/static-com/DaysFrom/style.scss
@@ -9,13 +9,16 @@
   }
 
   > span {
+    font-size: 12pt;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
 
     &::after {
-      content: attr(data-unit)
+      content: attr(data-unit);
+      font-size: 7pt;
+      margin: 0 2pt;
     }
   }
 }
