--- a/src/app/js/components/static-com/Nav/style.scss
+++ b/src/app/js/components/static-com/Nav/style.scss
@@ -51,13 +51,13 @@
       color: $text-color;
     }
 
-    &[data-status="selected"]  .nav-item-text {
+    &[data-selected="true"]  .nav-item-text {
       top: 0;
       opacity: 1;
       color: $theme-color
     }
 
-    &[data-status="hover"]  .nav-item-text {
+    &:hover .nav-item-text {
       top: 0;
       opacity: 1;
     }
