refactor(style): 调整博文样式。

--- a/src/app/js/components/static-com/Post/style.scss
+++ b/src/app/js/components/static-com/Post/style.scss
@@ -16,11 +16,7 @@ article {
     margin-bottom: 15pt;
   }
 
-  img {max-width: 100%}
-
-  .markdown-body > img {
-    margin-bottom: 5pt;
-  }
+  img {max-width: 100%; margin-bottom: 5pt;}
 
   pre, .markdown-body {
     font-family: "Microsoft YaHei", serif;
