--- a/src/app/js/components/static-com/Nav/style.scss
+++ b/src/app/js/components/static-com/Nav/style.scss
@@ -63,3 +63,43 @@
     }
   }
 }
+
+#app[data-is-mobile="true"] {
+  .nav {
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    top: unset;
+    bottom: 0;
+    left: 0;
+    height: 49pt;
+    border-top: solid 1pt #dddddd;
+    &::after{content: unset}
+    .nav-item {
+      position: relative;
+      list-style: none;
+      height: 49pt;
+      cursor: pointer;
+      background: none;
+      display: inline-block;
+      width: 16.666666666666666666667%;
+      &::before{content: unset}
+      &[data-selected="true"]::after {
+        content: "";
+        display: inline-block;
+        width: 100%;
+        height: 5pt;
+        position: absolute;
+        background: $theme-color;
+        bottom: 0;
+      }
+      .icon-wrap > span:first-child {
+        left: 50%;
+        position: relative;
+        transform: translateX(-50%);
+        & + span {display: none}
+      }
+    }
+  }
+}
