--- a/src/app/tpl/index.html
+++ b/src/app/tpl/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
     <meta name="theme-color" content="#fff">
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/error.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="/images/fufu192x192.png">
     <meta name="Description" content="moon's blog">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <style>
