--- a/src/app/js/components/static-com/Nav/style.scss
+++ b/src/app/js/components/static-com/Nav/style.scss
@@ -75,6 +75,7 @@
     left: 0;
     height: 49pt;
     border-top: solid 1pt #dddddd;
+    background: #fff;
     &::after{content: unset}
     .nav-item {
       position: relative;
