--- a/src/app/js/components/container-com/Blog/style.scss
+++ b/src/app/js/components/container-com/Blog/style.scss
@@ -75,6 +75,7 @@
       padding-top: 40pt;;
       height: 370pt;
       overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
     }
   }
 }
