--- a/src/app/js/components/container-com/Blog/style.scss
+++ b/src/app/js/components/container-com/Blog/style.scss
@@ -73,7 +73,7 @@
     section[data-loading="false"]{
       top: 0;
       padding-top: 40pt;;
-      height: 370pt;
+      max-height: calc(100vh - 162pt);
       overflow-y: scroll;
       -webkit-overflow-scrolling: touch;
     }
