refactor(_main.scss): 图片新增圆角样式，底边距调整。

--- a/src/app/js/components/static-com/Post/style.scss
+++ b/src/app/js/components/static-com/Post/style.scss
@@ -16,7 +16,7 @@ article {
     margin-bottom: 15pt;
   }
 
-  img {max-width: 100%; margin-bottom: 5pt;}
+  img {max-width: 100%; margin-bottom: 5pt; border-radius: 10pt;}
 
   pre, .markdown-body {
     font-family: "Microsoft YaHei", serif;
