--- a/src/app/scss/markdown.css
+++ b/src/app/scss/markdown.css
@@ -380,7 +380,7 @@
     margin-top: 0 !important;
 }
 
-.markdown-body>*:last-child {
+.markdown-body>*:last-child:not(img) {
     margin-bottom: 0 !important;
 }
 
