fix: 最后一篇博文不显示分隔线

--- a/src/app/js/components/static-com/Post/style.scss
+++ b/src/app/js/components/static-com/Post/style.scss
@@ -12,6 +12,9 @@ article {
     position: relative;
     top: 15pt
   }
+  &:last-child::after{
+    border: none;
+  }
   header {
     margin-bottom: 15pt;
   }
