fix: update font

--- a/src/app/js/components/static-com/Post/style.scss
+++ b/src/app/js/components/static-com/Post/style.scss
@@ -25,7 +25,7 @@ article {
   img {max-width: 100%; margin-bottom: 5pt; border-radius: 10pt;}
 
   pre, .markdown-body {
-    font-family: "Microsoft YaHei", serif;
+    font-family: PingFangSC-Regular, "Microsoft YaHei", serif;
     line-height: 2;
   }
 }
