fix: update font

--- a/src/app/js/components/static-com/Nav/style.scss
+++ b/src/app/js/components/static-com/Nav/style.scss
@@ -1,5 +1,6 @@
 @import "../../../../scss/main";
 .nav {
+  font-family: PingFangSC-Regular, "Microsoft YaHei", serif;
   margin: 0;
   padding: 0;
   width: auto;
