--- a/src/app/js/components/static-com/Spinner/style.scss
+++ b/src/app/js/components/static-com/Spinner/style.scss
@@ -58,3 +58,42 @@
   }
 }
 
+.spinner {
+  position: absolute;
+  left: calc(50% - 34px);
+  top: calc(50% - 34px);
+}
+
+$spinnerWidth: 20px;
+$spinnerGap: 8px;
+$spinnerBorderRadius: 6px;
+$spinnerOffset: $spinnerWidth + $spinnerGap;
+
+.spinner > div {
+  width: $spinnerWidth;
+  height: $spinnerWidth;
+  position: absolute;
+  border-radius: $spinnerBorderRadius;
+}
+.square1, .square2, .square3, .square4 {
+  animation: sk-cubemove 1.2s infinite cubic-bezier(0, 0, 0, 0.97);;
+}
+.square1 {
+  background-color: #FFA290;
+  animation-delay: -0.5s;
+}
+.square2 {
+  background-color: #FFE6AA;
+  animation-delay: -0.9s;
+}
+.square3 {
+  background-color: #D2F5FC;
+  animation-delay: -1.3s;
+}
+
+
+@keyframes sk-cubemove {
+  25% { transform: translateX($spinnerOffset)  }
+  50% { transform: translateX($spinnerOffset) translateY($spinnerOffset) }
+  75% { transform: translateX(0px) translateY($spinnerOffset)  }
+}
