--- a/components/ArticleCard.module.scss
+++ b/components/ArticleCard.module.scss
@@ -4,15 +4,21 @@
 }
 
 .cover {
+  border-radius: 4px;
   border: solid 1px #cbcbcb;
   height: 200px;
   width: 200px;
   transition: all .2s;
+  overflow: hidden;
 
   box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 
+  img {
+    max-width: 200px;
+    max-height: 200px;
+  }
   &:hover {
-    box-shadow: 0 4px 6px rgba(107, 101, 93, 0.3);
+    box-shadow: 0 8px 8px rgba(102, 102, 102, 0.3);
   }
 }
 
