feat: scroll to turn page

--- a/components/Articles.module.scss
+++ b/components/Articles.module.scss
@@ -1,8 +1,8 @@
 .articles {
-  height: 544px;
+  height: 604px;
+  padding: 30px 0;
   min-width: 1150px;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
   &::-webkit-scrollbar {
     width: 0;
     display: none;
